--- a/Areas/Admin/Views/PurchaseDetails/Accept.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/Accept.cshtml
@@ -27,10 +27,7 @@
         </div>
         @{
             int purid = 0;
-            string status = "";
-            string color = "";
-            string color_can = "btn btn-danger";
-            string text_can = "Hủy";
+
         }
         <!-- row -->
 
@@ -39,7 +36,7 @@
             @foreach (var item in Model) {
 
                 purid = item.PurchaseId;
-                status = item.Purchase.TransactStatus;
+              
                 <dt class="col-sm-2">
                     Mã số đơn hàng
                 </dt>
@@ -84,33 +81,7 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => item.Purchase.TransactStatus)
                 </dd>
-                if (status.Equals("saved")) {
-                    status = "gửi yêu cầu";
-                    color = "btn btn-outline-info";
-                }
 
-
-                if (status.Equals("receive")) {
-                    status = "nhận hàng";
-                    color = "btn btn-outline-success";
-
-                }
-                if (status.Equals("sent")) {
-                    status = "nhận hàng";
-                    color = "btn btn-outline-secondary";
-
-                }
-                if (status.Equals("receive")) {
-                    status = "thanh toán";
-                    color = "btn btn-outline-success";
-
-                }
-                if (status.Equals("done")) {
-                    status = "";
-                    color = "";
-                    color_can = "";
-                    text_can = "";
-                }
            
 
                 break;
@@ -163,9 +134,9 @@
     <br />
     <br />
     <div class="container-fluid">
-        <a asp-action="Accept" class="@color" asp-route-id="@purid">@status</a>
+        <a class = "btn btn-outline-success" href="@Url.Action("Payment","Purchases",new {id = purid})">Thanh toán</a>
         <a asp-action="Transaction" class="btn btn-outline-dark ">Trở về</a>
-        <a asp-action="Delete" class="@color_can" asp-route-id="@purid">@text_can</a>
+        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@purid">Hủy</a>
     </div>
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
