--- a/Areas/Admin/Views/PurchaseDetails/Delete.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/Delete.cshtml
@@ -51,7 +51,7 @@
             @Html.DisplayNameFor(model => model.Purchase)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Purchase.PruchaseId)
+            @Html.DisplayFor(model => model.Purchase.PurchaseId)
         </dd>
     </dl>
     
