--- a/Areas/Admin/Views/PurchaseDetails/Transaction.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/Transaction.cshtml
@@ -88,32 +88,31 @@
                                         }
 
                                         <td><span class= "@color" >@Html.DisplayFor(model => item.Purchase.TransactStatus)</span></td>
-                                           @{ string status = "Xác nhận"; color = "btn btn-outline-info"; string color_can = "btn btn-danger"; string text_can = "Hủy"; }
+                                           @{ string status = "Xác nhận"; color = "btn btn-outline-danger"; string color_can = "btn btn-danger"; string text_can = "Hủy"; }
 
-                                         @if(item.Purchase.TransactStatus.Equals("saved")){
+                                         @if(item.Purchase.TransactStatus.Equals("saved")){                 
                                                 status = "gửi yêu cầu";
                                                 color = "btn btn-outline-info";
                                             } 
                                         @if(item.Purchase.TransactStatus.Equals("sent")){
-                                                status = "thanh toán";
+                                                status = "nhận hàng";
                                                 color = "btn btn-outline-secondary";
                                         } 
-                                              @if(item.Purchase.TransactStatus.Equals("done")){
+                                            @if (item.Purchase.TransactStatus.Equals("receive")) {
+                                                status = "thanh toán";
+                                                color = "btn btn-outline-success";
+                                            }
+                                            @if(item.Purchase.TransactStatus.Equals("done") ||item.Purchase.TransactStatus.Equals("cancel") ){
                                                 status = "";
-                                                 color = "";
+                                                color = "";
                                                 color_can = "";
                                                 text_can = "";
                                             } 
-                                            @if (item.Purchase.TransactStatus.Equals("cancel")) {
-                                                status = "khôi phục";
-                                                 color = "btn btn-outline-warning";
-                                                color_can = "btn btn-warning";
-                                                text_can = "Khôi phục";
-                                            }
+                                            
                                             <td>
-                                             <a asp-action="Accecpt" asp-route-id="@item.PurchaseId" class = "@color" >@status</a>  
-                                             <a asp-action="BillDetails" asp-route-id="@item.PurchaseId" class = "btn btn-outline-primary">Chi tiết</a>    
-                                             <a asp-action="BillDel" asp-route-id="@item.PurchaseId" class = "@color_can">@text_can</a>   
+                                             <a asp-action="Accept" asp-route-id="@item.PurchaseId" class = "@color" id = "route" >@status</a>  
+                                             <a asp-action="Details" asp-route-id="@item.PurchaseId" class = "btn btn-outline-primary">Chi tiết</a>    
+                                             <a asp-action="Delete" asp-route-id="@item.PurchaseId" class = "@color_can">@text_can</a>   
                                         </td>
                                     </tr>   
                                }
@@ -123,6 +122,8 @@
                             </table>
                             <script type = "text/javascript">
                                    $("#product").val().replace(/\n/g, '<br/>');
+                                
+
                             </script>
                         </div>
                     </div>
