--- a/Areas/Admin/Views/SaleManagers/ProductBill.cshtml
+++ b/Areas/Admin/Views/SaleManagers/ProductBill.cshtml
@@ -26,7 +26,7 @@
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý bán hàng</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Tất cả giao dịch</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Đơn hàng sản phẩm</a></li>
                 </ol>
             </div>
         </div>
@@ -98,7 +98,7 @@
                                                 status = "thanh toán";
                                                 color = "btn btn-outline-success";
                                             } 
-                                              @if(item.Order.TransactStatus.Equals("done")){
+                                              @if(item.Order.TransactStatus.Equals("done") || item.Order.TransactStatus.Equals("cancel")){
                                                 status = "";
                                                  color = "";
                                                 color_can = "";
@@ -106,7 +106,7 @@
                                             } 
                                           <td>
                                              <a asp-action="Accecpt" asp-route-id="@item.OrderId" class = "@color" >@status</a>  
-                                             <a asp-action="BillDetails" asp-route-id="@item.OrderId" class = "btn btn-outline-primary";">Chi tiết</a>    
+                                             <a asp-action="BillDetails" asp-route-id="@item.OrderId" class = "btn btn-outline-primary">Chi tiết</a>    
                                              <a asp-action="BillDel" asp-route-id="@item.OrderId" class = "@color_can">@text_can</a>   
                                         </td>
                                     </tr>   
