sáng mua hàng chiều bán hàng tối ăn hàng

--- a/Areas/Admin/Views/Products/Recycle.cshtml
+++ b/Areas/Admin/Views/Products/Recycle.cshtml
@@ -103,7 +103,7 @@
                                             </td>
                                      
                                             <td>
-                                                <a asp-action="Edit" asp-route-id="@item.ProductId" class="btn btn-secondary">Edit</a> 
+                                                <a asp-action="Recover" asp-route-id="@item.ProductId" class="btn btn-secondary">Khôi phục</a> 
                                                 <a asp-action="Details" asp-area="" asp-controller = "Products" asp-route-id="@item.ProductId" class="btn btn-outline-primary">Details</a> 
                                   
                                             </td>
