--- a/Areas/Admin/Views/PurchaseDetails/Transaction.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/Transaction.cshtml
@@ -110,9 +110,9 @@
                                             } 
                                             
                                             <td>
-                                             <a asp-action="Accept" asp-route-id="@item.PurchaseId" class = "@color" id = "route" >@status</a>  
-                                             <a asp-action="Details" asp-route-id="@item.PurchaseId" class = "btn btn-outline-primary">Chi tiết</a>    
-                                             <a asp-action="Delete" asp-route-id="@item.PurchaseId" class = "@color_can">@text_can</a>   
+                                             <a asp-action="Accept_T" asp-route-id="@item.PurchaseId" class = "@color" id = "route" >@status</a>  
+                                             <a asp-action="Details_T" asp-route-id="@item.PurchaseId" class = "btn btn-outline-primary">Chi tiết</a>    
+                                             <a asp-action="Delete_T" asp-route-id="@item.PurchaseId" class = "@color_can">@text_can</a>   
                                         </td>
                                     </tr>   
                                }
