--- a/Views/OrderDetails/Pay.cshtml
+++ b/Views/OrderDetails/Pay.cshtml
@@ -296,7 +296,9 @@
                                             data: JSON.stringify( model ),
                                             processData: true,
                                             cache: false,
-
+                                            success: function(){
+                                                alert("succ");
+                                            }
                                                 });
                                             }
 
