--- a/Areas/Admin/Views/SaleManagers/BillDetails_B.cshtml
+++ b/Areas/Admin/Views/SaleManagers/BillDetails_B.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<WEB2.Models.PurchaseDetail>
+﻿@model IEnumerable<WEB2.Models.OrderDetail>
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "BillDetails";
 }
 
 
@@ -19,14 +19,14 @@
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a asp-action="Index">Quản lý mua hàng</a></li>
+                    <li class="breadcrumb-item"><a asp-action="Index">Quản lý bán hàng</a></li>
                     <li class="breadcrumb-item active"><a asp-action="Index">Hóa đơn</a></li>
                     <li class="breadcrumb-item active"><a href="javascript:void(0)">Chi tiết</a></li>
                 </ol>
             </div>
         </div>
-        @{
-            int purid = 0;
+                           @{
+            int orderid = 0;
             string status = "";
             string color = "";
             string color_can = "btn btn-danger";
@@ -34,75 +34,74 @@
         }
         <!-- row -->
 
-        <dl class="row card">
-
-            @foreach (var item in Model) {
-
-                purid = item.PurchaseId;
-                status = item.Purchase.TransactStatus;
+          <dl class="row">
+    
+        @foreach (var item in Model) {
+          
+                orderid = item.OrderId;
+                status = item.Order.TransactStatus;
                 <dt class="col-sm-2">
                     Mã số đơn hàng
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.PurchaseId)
-                </dd>
-
-                <dt class="col-sm-2">
-                    Mã nhân viên
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Purchase.Staff.StaffId)
-                </dd>
-                <dt class="col-sm-2">
-                    Nhân viên
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Purchase.Staff.AppUser.FullName)
+                    @Html.DisplayFor(model => item.OrderId)
                 </dd>
                 <dt class="col-sm-2">
                     Mã giao dịch
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Purchase.TransactionNo)
+                    @Html.DisplayFor(model => item.Order.TransactionNo)
                 </dd>
 
+                <dt class="col-sm-2">
+                    Voucher giảm giá
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Order.Customer.Voucher_Details)
+                </dd>
                 <dt class="col-sm-2">
                     Tổng tiền
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Purchase.Paid)
+                    @Html.DisplayFor(model => item.Order.Paid)
                 </dd>
                 <dt class="col-sm-2">
                     Ngày tạo
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Purchase.PurchaseDay)
+                    @Html.DisplayFor(model => item.Order.OrderDay)
+                </dd>
+                <dt class="col-sm-2">
+                    Đơn vị vận chuyển
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Order.Shipment.CompanyName)
+                </dd>
+                <dt class="col-sm-2">
+                    Phương thức thanh toán
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Order.Payment.PaymentType)
                 </dd>
                 <dt class="col-sm-2">
                     Tình trạng đơn hàng
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Purchase.TransactStatus)
+                    @Html.DisplayFor(model => item.Order.TransactStatus)
                 </dd>
-                if (status.Equals("saved")) {
-                    status = "gửi yêu cầu";
+                if (status.Equals("shipping")) {
+                    status = "thanh toán";
+                    color = "btn btn-outline-success";
+                }
+
+                if (status.Equals("paid") || status.Equals("pay by cash")) {
+                    status = "duyệt đơn";
                     color = "btn btn-outline-info";
                 }
 
-
-                if (status.Equals("receive")) {
-                    status = "nhận hàng";
-                    color = "btn btn-outline-success";
-
-                }
-                if (status.Equals("sent")) {
-                    status = "nhận hàng";
+                if (status.Equals("accept")) {
+                    status = "vận chuyển";
                     color = "btn btn-outline-secondary";
-
-                }
-                if (status.Equals("receive")) {
-                    status = "thanh toán";
-                    color = "btn btn-outline-success";
 
                 }
                 if (status.Equals("done")) {
@@ -111,11 +110,10 @@
                     color_can = "";
                     text_can = "";
                 }
-           
-
+                
                 break;
-
-            }
+            
+        }
         </dl>
         <table id="example" class="display" style="min-width: 845px">
             <thead>
@@ -131,7 +129,9 @@
                     </th>
 
                     <th>Đơn giá</th>
-
+                    <th>
+                        Khuyến mãi sản phẩm
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -152,20 +152,22 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Price)
                         </td>
-
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Discount)
+                        </td>
                     </tr>
 
                 }
             </tbody>
-        </table>
+            </table>
 
     </div>
     <br />
     <br />
-    <div class="container-fluid">
-        <a asp-action="Accept" class="@color" asp-route-id="@purid">@status</a>
-        <a asp-action="Transaction" class="btn btn-outline-dark ">Trở về</a>
-        <a asp-action="Delete" class="@color_can" asp-route-id="@purid">@text_can</a>
+    <div class= "container-fluid">
+        <a asp-action="Accept_B" class="@color" asp-route-id="@orderid">@status</a>
+        <a asp-action="ProductBill" class="btn btn-outline-dark ">Trở về</a>
+        <a asp-action="BillDel_B" class="@color_can" asp-route-id="@orderid">@text_can</a>   
     </div>
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
