--- a/Areas/Admin/Views/PurchaseDetails/Accept_R.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/Accept_R.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<WEB2.Models.OrderDetail>
+﻿@model IEnumerable<WEB2.Models.PurchaseDetail>
 
 @{
-    ViewData["Title"] = "BillDetails";
+    ViewData["Title"] = "Details";
 }
 
 
@@ -19,101 +19,74 @@
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a asp-action="Index">Quản lý bán hàng</a></li>
+                    <li class="breadcrumb-item"><a asp-action="Index">Quản lý mua hàng</a></li>
                     <li class="breadcrumb-item active"><a asp-action="Index">Hóa đơn</a></li>
                     <li class="breadcrumb-item active"><a href="javascript:void(0)">Chi tiết</a></li>
                 </ol>
             </div>
         </div>
-                           @{
-            int orderid = 0;
-            string status = "";
-            string color = "";
-            string color_can = "btn btn-danger";
-            string text_can = "Hủy";
+        @{
+            int purid = 0;
+
         }
         <!-- row -->
 
-          <dl class="row card">
-    
-        @foreach (var item in Model) {
-          
-                orderid = item.OrderId;
-                status = item.Order.TransactStatus;
+        <dl class="row card">
+
+            @foreach (var item in Model) {
+
+                purid = item.PurchaseId;
+              
                 <dt class="col-sm-2">
                     Mã số đơn hàng
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.OrderId)
+                    @Html.DisplayFor(model => item.PurchaseId)
+                </dd>
+
+                <dt class="col-sm-2">
+                    Mã nhân viên
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Purchase.Staff.StaffId)
+                </dd>
+                <dt class="col-sm-2">
+                    Nhân viên
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Purchase.Staff.AppUser.FullName)
                 </dd>
                 <dt class="col-sm-2">
                     Mã giao dịch
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Order.TransactionNo)
+                    @Html.DisplayFor(model => item.Purchase.TransactionNo)
                 </dd>
 
-                <dt class="col-sm-2">
-                    Voucher giảm giá
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Order.Customer.Voucher_Details)
-                </dd>
                 <dt class="col-sm-2">
                     Tổng tiền
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Order.Paid)
+                    @Html.DisplayFor(model => item.Purchase.Paid)
                 </dd>
                 <dt class="col-sm-2">
                     Ngày tạo
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Order.OrderDay)
-                </dd>
-                <dt class="col-sm-2">
-                    Đơn vị vận chuyển
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Order.Shipment.CompanyName)
-                </dd>
-                <dt class="col-sm-2">
-                    Phương thức thanh toán
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Order.Payment.PaymentType)
+                    @Html.DisplayFor(model => item.Purchase.PurchaseDay)
                 </dd>
                 <dt class="col-sm-2">
                     Tình trạng đơn hàng
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => item.Order.TransactStatus)
+                    @Html.DisplayFor(model => item.Purchase.TransactStatus)
                 </dd>
-                if (status.Equals("shipping")) {
-                    status = "thanh toán";
-                    color = "btn btn-outline-success";
-                }
 
-                if (status.Equals("paid") || status.Equals("pay by cash")) {
-                    status = "duyệt đơn";
-                    color = "btn btn-outline-info";
-                }
+           
 
-                if (status.Equals("accept")) {
-                    status = "vận chuyển";
-                    color = "btn btn-outline-secondary";
-
-                }
-                if (status.Equals("done")) {
-                    status = "";
-                    color = "";
-                    color_can = "";
-                    text_can = "";
-                }
-                
                 break;
-            
-        }
+
+            }
         </dl>
         <table id="example" class="display" style="min-width: 845px">
             <thead>
@@ -129,9 +102,7 @@
                     </th>
 
                     <th>Đơn giá</th>
-                    <th>
-                        Khuyến mãi sản phẩm
-                    </th>
+
                 </tr>
             </thead>
             <tbody>
@@ -152,22 +123,20 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Price)
                         </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Discount)
-                        </td>
+
                     </tr>
 
                 }
             </tbody>
-            </table>
+        </table>
 
     </div>
     <br />
     <br />
-    <div class= "container-fluid">
-        <a asp-action="Accept_S" class="@color" asp-route-id="@orderid">@status</a>
-        <a asp-action="Shipping" class="btn btn-outline-dark ">Trở về</a>
-        <a asp-action="BillDel_S" class="@color_can" asp-route-id="@orderid">@text_can</a>   
+    <div class="container-fluid">
+        <a class = "btn btn-outline-success" href="@Url.Action("Payment","Purchases",new {id = purid})">Thanh toán</a>
+        <a asp-action="Receipt" class="btn btn-outline-dark ">Trở về</a>
+        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@purid">Hủy</a>
     </div>
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
