--- a/Areas/Admin/Views/SaleManagers/BillDetails_B.cshtml
+++ b/Areas/Admin/Views/SaleManagers/BillDetails_B.cshtml
@@ -34,7 +34,7 @@
         }
         <!-- row -->
 
-          <dl class="row">
+          <dl class="row card">
     
         @foreach (var item in Model) {
           
